# voiceSpoofingDetectionWavelet

./: .autotools  .cproject  .gitignore  .gitmodules  .project  .swp  .vimrc  CMakeLists.txt  README.md  Teste.launch  buildForLinux.sh  duvidas.txt  latex.bib  make.launch  mestrado Debug.launch  mestrado.launch  rename.sh  reunião-2020-03-28.txt  splitWave.sh
Debug/: makefile  mestrado
Debug/src/: subdir.mk
articles/: tabela_de_coeficientes_wavelet.txt
articles/NORSIG/: tutorials_NORSIG_1_MR.pps  tutorials_NORSIG_3_MRSP.pps  tutorials_NORSIG_4_TF.pps
articles/readed/waveletTutorial/: Wavelet Tutorial - Part 2.html
data/: data2019-08-11.csv  data2019-08-22.csv  inputList.txt  inputList2.txt  inputListLive.txt  inputListSpoofing.txt  plot.plt  plot2.plt
documentation/: .gitignore  bibliography.bib  dataSurvey.csv  firstTestData.csv  latex.tex  levantamento.csv_  levantamento.ods  monografia.tex  monografia.tex_
documentation/00-dissertation/monography/: TODO.txt  bibliography.bib  monografia.tex
documentation/00-dissertation/presentation/: apresentacao.tex  bibliography.bib  preamble.tex
documentation/01-researchNotesAndFiles/: day80.txt
documentation/01-researchNotesAndFiles/day0/: anotacoes.odt
documentation/01-researchNotesAndFiles/day50/: day50.txt
documentation/02-readedArticles/waveletTutorial/: Wavelet Tutorial - Part 4.html
documentation/04-Corrections/: .gitignore  finalCorrections.txt  qualificationNotes.txt  questions.txt
documentation/05-Article/: article.tex  bibliography.bib  distParacomFrom10.csv  elsart.cls
documentation/05-Article/codeListings/: experiment02Algo.tex
documentation/05-Article/data/: preamble.tex
documentation/05-Article/images/: 3layersSVM.tex  AlgoProcedure02.dia  EERAlgopdf  EERCalculus.dia  strategicStructure.tex
documentation/05-Article/sections/: 00-frontamatter.tex  01-introduction.tex  02-bibliographicalReview.tex  02-viewAndMotivation.tex  03-proposedApproach.tex  04-testsAndResults.tex  05-conclusions.tex  06-references.tex  abstract.tex  keywords.tex
documentation/05-article/: article-blx.bib  article.tex  orienta.txt
documentation/05-article/codeListings/: EERAlgo.tex  experiment01Algo.tex  experiment02Algo.tex  experiment03Algo.tex
documentation/05-article/data/: preamble.tex
documentation/05-article/images/: 3layersSVM.tex  AlgoProcedure01.dia  AlgoProcedure02.dia  AlgoProcedure03.dia  EERCalculus.dia  strategicStructure.tex
documentation/05-article/sections/: 01-introduction.tex  02-viewAndMotivation.tex  022-bibliographicalReview.tex  03-proposedApproach.tex  04-testsAndResults.tex  05-conclusions.tex  06-references.tex
documentation/05-article/tables/: regularWaveletExample.tex
documentation/confusionMatrices/: classifier_Euclidian_10.csv  classifier_Euclidian_20.csv  classifier_Euclidian_50.csv  classifier_Manhattan_10.csv  classifier_Manhattan_10.ods  classifier_Manhattan_20.csv  classifier_Manhattan_20.ods  classifier_Manhattan_30.csv  classifier_Manhattan_30.ods  classifier_Manhattan_40.csv  classifier_Manhattan_40.ods  classifier_Manhattan_50.csv  classifier_Manhattan_50.ods  classifier_SVM_10.csv  classifier_SVM_30.csv  classifier_SVM_40.csv
documentation/dissertation/: bibliography.bib  monografia.toc
documentation/dissertation/tex/: plot.plot
documentation/paraconsistentPlaneDetails/: Figure_1.pgf  results.csv
documentation/results/: graphs.xcf
documentation/results/confusionMatrices/: classifier_Euclidian_30.csv  classifier_Euclidian_40.csv
pesquisa/day01/octaveScripts/: fftPlot2.m  fwtSample.m
pesquisa/day02/octaveScripts/: fwtShowWavelets.m
pesquisa/day03/: scalingAndTranslatingFunctions.m  waveletScaleAndTransFunction.m
pesquisa/day06/: convolution01.m  convolutionAsFreqMult.m
pesquisa/day20/: haarWavelet.ods  packetWavelet.m
soundSamples/: .gitignore  dataSurvey.ods  toWave.sh
soundSamples/originals/: Voz1.3gpp  Voz10.3gpp  Voz12.3gpp  Voz15.3gpp  Voz17.3gpp  Voz18.3gpp  Voz19.3gpp  Voz2.3gpp  Voz20.3gpp  Voz21.3gpp  Voz4.3gpp  Voz9.3gpp
soundSamples/originals3gp/: Voz11.3gpp  Voz13.3gpp  Voz14.3gpp  Voz16.3gpp  Voz3.3gpp  Voz5.3gpp  Voz6.3gpp  Voz7.3gpp  Voz8.3gpp
soundSamples/separated/: dataSurvey.txt  inputListLive.txt  inputListSpoofing.txt
soundSamples/separated/live/en_US/5/: .gitignore
src/: MelAndBarkExamplesFunctions.cpp  TestSVM.cpp  Wav.cpp  WavProcessor.cpp  debug.cpp  main.c++  main.cpp  main1.cpp  main2.cpp  mestrado.doxyfile  results.txt  wavStructures.h
src/experiments/01/: Experiment01.cpp  experiment01.cpp  experiment01.h
src/experiments/02/: Experiment01.cpp  Experiment02.cpp
src/experiments/03/: Experiment03.cpp
src/experiments/04/: Experiment04.cpp
src/experiments/05/: Experiment05.cpp
src/experiments/06/: Experiment06.cpp
src/experiments/07/: Experiment07.cpp
src/experiments/08/: Experiment08.cpp
src/experiments/x/: ExperimentX.cpp
src/lib/classifiers/: DistanceClassifier.cpp  DistanceClassifier.h  NeuralNetwork.cpp  NeuralNetwork.h  SupportVectorMachine.cpp  SupportVectorMachine.h  SupportVectorMachineTest.cpp  featureVectorsUtils.cpp  featureVectorsUtils.h
src/lib/file/: fileUtils.cpp  fileUtils.h
src/lib/gnuplot/: gnuplotCalls.cpp  gnuplotCalls.h
src/lib/linearAlgebra/: linearAlgebra.cpp  linearAlgebra.h
src/lib/paraconsistent/: example.cpp  paraconsistent.cpp  paraconsistent.h  paraconsistentTest.cpp  test.cpp
src/lib/statistics/: confusionMatrix.cpp  confusionMatrix.h  statistics.cpp  statistics.h
src/lib/utility/: comparison.cpp  comparison.h
src/lib/vector/: vectorUtils.cpp  vectorUtils.h
src/lib/wav/: WavProcessor.cpp
src/lib/wave/: Wav.cpp  Wav.h  filtersOperations.cpp  filtersOperations.h  simpleSignalOperations.cpp  simpleSignalOperations.h
src/lib/wavelet/: Types.cpp  Types.h  WaveletTransformResults.cpp  WaveletTransformResults.h  waveletCoeficients.cpp  waveletCoeficients.h  waveletOperations.cpp  waveletOperations.h
src/scripts/: eraseStringInPdf.sh  rename.sh  splitWave.sh
src/tests/: MelAndBarkExamplesFunctions.cpp  NeuralNetwork.cpp  TestSVM.cpp  TestWavelet.cpp
(+207 files in other folders)
